# fragr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: broken.frag  plasma.frag
src/: gl_context.cpp  gl_context.h  main.cpp  shader.cpp  shader.h
